# endpoint_protection

./: Cargo.toml  README.md
config/: settings.toml
src/: config.rs  file_monitor.rs  lib.rs  main.rs
src/tests/: file_monitor_tests.rs  mod.rs
tests/: config_tests.rs  file_monitor_tests.rs
