[package]
name = "endpoint_protection_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
# For serialization/deserialization (e.g., for communication with a server)
serde = { version = "1.0.219", features = ["derive"] }

# For file system event monitoring (OS-specific, requires careful handling)
notify = "8.1.0"
toml = "0.9.2" # Cross-platform filesystem event notification library. Requires specific setup.

log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.20.0"

[lib]
name = "endpoint_protection_agent"
path = "src/lib.rs"

[[bin]]
name = "endpoint_protection_agent"
path = "src/main.rs"